// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Visualizations -> Table -> Editor -> Columns Settings Changes column alignment 1`] = `
{
  "columns": [
    {
      "alignContent": "right",
      "allowHTML": false,
      "allowSearch": false,
      "booleanValues": [
        "false",
        "true",
      ],
      "dateTimeFormat": undefined,
      "description": "",
      "displayAs": "string",
      "highlightLinks": false,
      "imageHeight": "",
      "imageTitleTemplate": "{{ @ }}",
      "imageUrlTemplate": "{{ @ }}",
      "imageWidth": "",
      "linkOpenInNewTab": true,
      "linkTextTemplate": "{{ @ }}",
      "linkTitleTemplate": "{{ @ }}",
      "linkUrlTemplate": "{{ @ }}",
      "name": "a",
      "nullValue": "null",
      "numberFormat": undefined,
      "order": 100000,
      "title": "a",
      "type": "string",
      "visible": true,
    },
  ],
}
`;

exports[`Visualizations -> Table -> Editor -> Columns Settings Changes column display type 1`] = `
{
  "columns": [
    {
      "alignContent": "left",
      "allowHTML": false,
      "allowSearch": false,
      "booleanValues": [
        "false",
        "true",
      ],
      "dateTimeFormat": undefined,
      "description": "",
      "displayAs": "number",
      "highlightLinks": false,
      "imageHeight": "",
      "imageTitleTemplate": "{{ @ }}",
      "imageUrlTemplate": "{{ @ }}",
      "imageWidth": "",
      "linkOpenInNewTab": true,
      "linkTextTemplate": "{{ @ }}",
      "linkTitleTemplate": "{{ @ }}",
      "linkUrlTemplate": "{{ @ }}",
      "name": "a",
      "nullValue": "null",
      "numberFormat": undefined,
      "order": 100000,
      "title": "a",
      "type": "string",
      "visible": true,
    },
  ],
}
`;

exports[`Visualizations -> Table -> Editor -> Columns Settings Changes column title 1`] = `
{
  "columns": [
    {
      "alignContent": "left",
      "allowHTML": false,
      "allowSearch": false,
      "booleanValues": [
        "false",
        "true",
      ],
      "dateTimeFormat": undefined,
      "description": "",
      "displayAs": "string",
      "highlightLinks": false,
      "imageHeight": "",
      "imageTitleTemplate": "{{ @ }}",
      "imageUrlTemplate": "{{ @ }}",
      "imageWidth": "",
      "linkOpenInNewTab": true,
      "linkTextTemplate": "{{ @ }}",
      "linkTitleTemplate": "{{ @ }}",
      "linkUrlTemplate": "{{ @ }}",
      "name": "a",
      "nullValue": "null",
      "numberFormat": undefined,
      "order": 100000,
      "title": "test",
      "type": "string",
      "visible": true,
    },
  ],
}
`;

exports[`Visualizations -> Table -> Editor -> Columns Settings Enables search by column data 1`] = `
{
  "columns": [
    {
      "alignContent": "left",
      "allowHTML": false,
      "allowSearch": true,
      "booleanValues": [
        "false",
        "true",
      ],
      "dateTimeFormat": undefined,
      "description": "",
      "displayAs": "string",
      "highlightLinks": false,
      "imageHeight": "",
      "imageTitleTemplate": "{{ @ }}",
      "imageUrlTemplate": "{{ @ }}",
      "imageWidth": "",
      "linkOpenInNewTab": true,
      "linkTextTemplate": "{{ @ }}",
      "linkTitleTemplate": "{{ @ }}",
      "linkUrlTemplate": "{{ @ }}",
      "name": "a",
      "nullValue": "null",
      "numberFormat": undefined,
      "order": 100000,
      "title": "a",
      "type": "string",
      "visible": true,
    },
  ],
}
`;

exports[`Visualizations -> Table -> Editor -> Columns Settings Toggles column visibility 1`] = `
{
  "columns": [
    {
      "alignContent": "left",
      "allowHTML": false,
      "allowSearch": false,
      "booleanValues": [
        "false",
        "true",
      ],
      "dateTimeFormat": undefined,
      "description": "",
      "displayAs": "string",
      "highlightLinks": false,
      "imageHeight": "",
      "imageTitleTemplate": "{{ @ }}",
      "imageUrlTemplate": "{{ @ }}",
      "imageWidth": "",
      "linkOpenInNewTab": true,
      "linkTextTemplate": "{{ @ }}",
      "linkTitleTemplate": "{{ @ }}",
      "linkUrlTemplate": "{{ @ }}",
      "name": "a",
      "nullValue": "null",
      "numberFormat": undefined,
      "order": 100000,
      "title": "a",
      "type": "string",
      "visible": false,
    },
  ],
}
`;
